--- a/package.json
+++ b/package.json
@@ -9,11 +9,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.3.1",
+    "@vueup/vue-quill": "^1.2.0",
+    "axios": "^1.9.0",
+    "element-plus": "^2.9.9",
+    "pinia": "^3.0.2",
+    "pinia-persistedstate-plugin": "^0.1.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.3",
+    "sass-embedded": "^1.87.0",
     "vite": "^6.2.4",
     "vite-plugin-vue-devtools": "^7.7.2"
   }
