--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
+    "@heroicons/vue": "^2.2.0",
     "@vueup/vue-quill": "^1.2.0",
     "axios": "^1.9.0",
     "element-plus": "^2.9.9",
+    "marked": "^15.0.11",
     "pinia": "^3.0.2",
     "pinia-persistedstate-plugin": "^0.1.0",
     "vue": "^3.5.13",
